tests/ui/impl-trait/alias-liveness/tait-hidden-erased-unsoundness.stderr
error[E0700]: hidden type for `Tait<'a>` captures lifetime that does not appear in bounds
  --> $DIR/tait-hidden-erased-unsoundness.rs:18:5
   |
LL | type Tait<'a> = impl Sized + 'a;
   |                 --------------- opaque type defined here
LL | #[define_opaque(Tait)]
LL | fn step2<'a, 'b: 'a>() -> Tait<'a> {
   |              -- hidden type `impl Captures<'b> + 'a` captures the lifetime `'b` as defined here
LL |     step1::<'a, 'b>()
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0700`.
